--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "computation",
     "mathematics",
     "math",
-    "algebra",
+    "arithmetic",
     "subtraction",
     "element-wise",
     "array"
